# aria-qq-bot

./: .env.dev  .env.prod  .gitignore  DEPLOY.md  README.md  STARTUP.md  config.yml  device.json  main.py  pyproject.toml  requirements.txt  start.bat
ai_dev/: News模块测试计划.md  README.md  开发任务清单.md  开发检查清单.md  技术选型规格.md  需求文档_一期.md
ai_dev/一期/: News模块测试计划.md  README.md
config/: config.example.yaml
docs/: 需求文档_一期.md
plugins/: zzzai.py
src/llm/: __init__.py  openai_provider.py  provider.py
src/services/chat/: __init__.py  service.py
src/services/game/: __init__.py  data.py  keyword.py
src/services/news/: __init__.py  crawler.py  service.py
src/services/push/: __init__.py  service.py
src/storage/: __init__.py  database.py
src/utils/: __init__.py  config.py  jailbreak.py  logger.py  permission.py  sensitive.py
tests/: conftest.py
