[project]
name = "aria-qq-bot"
version = "0.1.0"
description = "Aria - 绝区零 QQ 机器人助手"
readme = "README.md"
requires-python = ">=3.9"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = []
plugin_dirs = ["plugins"]
builtin_plugins = ["echo"]
